# Automan-hunter

Workspace/ros2_ws/install/: local_setup.sh  setup.sh
Workspace/ros2_ws/install/hunter_base/lib/hunter_base/: hunter_base_node
Workspace/ros2_ws/install/hunter_base/share/hunter_base/: package.sh
Workspace/ros2_ws/install/hunter_description/share/hunter_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Workspace/ros2_ws/install/hunter_msgs/share/hunter_msgs/: package.ps1  package.sh
Workspace/ros2_ws/install/ugv_sdk/share/ugv_sdk/: package.dsv  package.ps1  (+1 more)
Workspace/ros2_ws/log/: latest_build  latest_list
Workspace/ros2_ws/src/hunter_ros2/hunter_base/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/hunter_ros2/hunter_description/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/hunter_ros2/hunter_gazebo/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/hunter_ros2/hunter_gazebo/config/: nav2_params.yaml
Workspace/ros2_ws/src/hunter_ros2/hunter_gazebo/launch/: hunter_gazebo.launch.py
Workspace/ros2_ws/src/hunter_ros2/hunter_gazebo/rviz/: viz.rviz
Workspace/ros2_ws/src/hunter_ros2/hunter_gazebo/urdf/: hunter_v1_ntunav_gazebo.xacro
Workspace/ros2_ws/src/hunter_ros2/hunter_gazebo/world/: cafe.world  gazebo_ros_ackermann_drive_demo.world  my_world.sdf
Workspace/ros2_ws/src/hunter_ros2/hunter_msgs/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/ugv_joy/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/ugv_joy/src/: ugv_joy.cpp
Workspace/ros2_ws/src/ugv_sdk/: package.xml
(+30 files in other folders)
